# bet.ai

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  =2.0.0  =3.10.0  Dockerfile  README.md  data_pipeline.py  elo_calculator.py  main.py  model.joblib  model.json  model_lgbm.joblib  model_lgbm_nba.joblib  model_lgbm_nfl.joblib  model_nba.json  model_nfl.json  model_trainer.py  model_xgb.joblib  model_xgb_nba.joblib  model_xgb_nfl.joblib  player_impact_model.py  pyproject.toml  requirements.txt  scaler.joblib  seed_data.py
bet_copilot/: README.md  demo_backend.py
bet_copilot/backend/: main.py  requirements.txt
bet_copilot/database/: create_db.py
bet_copilot/frontend/: package-lock.json  package.json
bet_copilot/frontend/src/: App.css  App.jsx
database/: create_db.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/components/: BetModal.css  BetModal.jsx  ConfidenceGauge.css  ConfidenceGauge.jsx  FilterControls.css  FilterControls.jsx  FilterControls.tsx  KPIBar.css  KPIBar.jsx  KPIStatCard.css  KPIStatCard.jsx  Navbar.css  Navbar.jsx  PredictionCard.css  PredictionCard.jsx  PredictionRow.css  PredictionRow.jsx  ResultTag.css  ResultTag.jsx  TrackPredictionModal.jsx  dashboard-stats.tsx  main-nav.tsx  prediction-table.tsx  site-header.tsx
frontend/src/lib/: api-client.ts  api-types.ts
frontend/src/pages/: ChatPage.css  ChatPage.jsx  DashboardPage.css  DashboardPage.jsx  chat-page.tsx  dashboard-page.tsx  (+1 more)
(+17 files in other folders)
