[build-system]
requires = ["setuptools", "wheel"]

[tool.parlant]
backend_app = "backend.main:app"
output_dir = "frontend/src/lib/parlant"

[project]
name = "bet-ai"
version = "1.0.0"
description = "Advanced Betting Analytics Platform with Parlant.io AI Integration"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "parlant>=3.0.0",
    "pydantic>=2.11.0",
    "requests>=2.32.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "numpy>=1.21.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy"
]