[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bet-copilot-backend"
version = "1.0.0"
description = "Elite analytical tool backend with Parlant integration"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "numpy>=1.21.0",
    "parlant>=3.0.0"
]

[tool.parlant]
name = "bet-copilot"
description = "Elite analytical tool API"
server = "localhost:8000"
output-dir = "../frontend/src/lib/parlant"